[gd_scene load_steps=7 format=2]

[ext_resource path="res://_src/Entities/Cars/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://_src/Entities/Cars/Player/player.png" type="Texture" id=2]
[ext_resource path="res://_src/Entities/Cars/car.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 28, 47 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 78, 47 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 78, 47 )

[node name="Player" type="Area2D" index="0"]

input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
collision_mask = 3
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
lane_setter = null

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Highlight" type="Sprite" parent="." index="1"]

visible = false
self_modulate = Color( 1, 0.773438, 0, 0.845294 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="LeftSide" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftSide" index="0"]

position = Vector2( -106, 0 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="RightSide" type="Area2D" parent="." index="5"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide" index="0"]

position = Vector2( 106, 0 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]

[connection signal="area_entered" from="LeftSide" to="." method="_on_LeftSide_area_entered"]

[connection signal="area_exited" from="LeftSide" to="." method="_on_LeftSide_area_exited"]

[connection signal="area_entered" from="RightSide" to="." method="_on_RightSide_area_entered"]

[connection signal="area_exited" from="RightSide" to="." method="_on_RightSide_area_exited"]


